--- a/Malnut.html
+++ b/Malnut.html
@@ -97,7 +97,43 @@
                     </article>
                 </div>
             </section>
-            
+             <section class="sec4">
+                <h2 class="h-secondary">Solutions.</h2>
+                <div class="sideway">
+                    <article class="detail">
+                        <figure class="prob-box">
+                            <img src="/images/sol4.jpeg" alt="">
+                            <figcaption><span class="h-tertiary">Improving access to nutritious foods:</span> This can be done
+                                    by promoting local food systems and local
+                                    agriculture, providing subsidies for healthy foods, and improving food distribution
+                                    systems.
+                                    Additionally, promoting home gardens can help to improve access to nutritious foods.
+                            </figcaption>
+                        </figure>
+                        <figure class="prob-box">
+                            <img src="/images/sol5.png" alt="">
+                            <figcaption><span class="h-tertiary"> Providing education on proper nutrition and hygiene:</span> Educating people on the importance of a
+                                balanced and nutritious diet, proper food storage, and hygiene practices can help to prevent
+                                malnutrition. Health education programs can be implemented in schools, health clinics, and
+                                community centers to promote healthy behaviors and improve health outcomes.</figcaption>
+                        </figure>
+                        <figure class="prob-box">
+                            <img src="/images/sol3.png" alt="">
+                            <figcaption><span class="h-tertiary"> Government policies:</span> The Indian government can implement policies that focus on improving
+                                nutrition outcomes, such as expanding food assistance programs and increasing investments in
+                                rural healthcare and nutrition programs.</figcaption>
+                        </figure>
+                        <!-- 
+                        
+
+                        Treating underlying health conditions: Malnutrition can often be a symptom of an underlying
+                        health condition. Treating these conditions, such as gastrointestinal diseases, can help to
+                        improve nutrient absorption and reduce the risk of malnutrition.
+
+                         -->
+                    </article>
+                </div>
+            </section>
         </div>
 
 
