--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="dropdown-content">
                         <a href="Malnut.html">Malnutrition</a>
                         <a href="std.html">STD</a>
-                        <a href="childhealth.html">Child Health</a>
+<!--                         <a href="childhealth.html">Child Health</a> -->
                     </div>
                 </div> 
                 <a href="aboutus.html">About Us</a>
