--- a/aboutus.html
+++ b/aboutus.html
@@ -28,14 +28,36 @@
                     <div class="dropdown-content">
                         <a href="Malnut.html">Malnutrition</a>
                         <a href="std.html">STD</a>
-<!--                         <a href="childhealth.html">Child Health</a> -->
+                        <!-- <a href="childhealth.html">Child Health</a> -->
                     </div>
                 </div> 
                 <a href="aboutus.html" class="active">About Us</a>
             </div>
     </header>
-    <div class="container">
-hello aboutus
+    <div class="about-container">
+        <section id="company">
+			<h2>Healthy Rural</h2>
+			<p>Our mission is to provide accessible and comprehensive information on a variety of healthcare topics to help individuals make informed decisions about their health and well-being.</p>
+		</section>
+		<section id="team">
+			<h2>Our Team</h2>
+			<div class="person">
+				<img src="/images/person.jpg" alt="Person 1">
+				<h3>Arfaz Ahmed</h3>
+				<p>CEO</p>
+			</div>
+			<div class="person">
+				<img src="/images/person.jpg" alt="Person 2">
+				<h3>Ajmal</h3>
+				<p>student</p>
+			</div>
+			<!-- <div class="person">
+				<img src="person3.jpg" alt="Person 3">
+				<h3>Bob Johnson</h3>
+				<p>CFO</p>
+			</div> -->
+		</section>
+
     </div>
 
 
